--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -110,6 +110,12 @@ on late-fs
 
 on post-fs-data
     mkdir /vendor/data/tombstones 0771 system system
+    rm /cache/boot_log_full.txt
+    rm /cache/boot_log_crash.txt
+    rm /cache/boot_log_kernel.txt
+    start boot_log
+    start boot_log_crash
+    start boot_log_kernel
 
 on early-boot
     start vendor.sensors
@@ -223,6 +229,12 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 
 on property:vendor.dcvs.prop=1
    start dcvs-sh
+
+on property:sys.boot_completed=1
+# Stop the logger service
+    stop boot_log
+    stop boot_log_crash
+    stop boot_log_kernel
 
 on property:persist.vendor.radio.port_index=""
     setprop sys.usb.config adb
