--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -109,21 +109,21 @@ on late-fs
     mount_all --late
 
 # Logcat Services
-service boot_log /system/bin/logcat -b all -D -f /data/media/0/boot_log_full.txt
+service boot_log /system/bin/logcat -b all -D -f /cache/boot_log_full.txt
     class main
     user root
     group root system
     disabled
     oneshot
 
-service boot_log_crash /system/bin/logcat -b crash -D -f /data/media/0/boot_log_crash.txt
+service boot_log_crash /system/bin/logcat -b crash -D -f /cache/boot_log_crash.txt
     class main 
     user root
     group root system
     disabled
     oneshot
 
-service boot_log_kernel /system/bin/logcat -b kernel -D -f /data/media/0/boot_log_kernel.txt
+service boot_log_kernel /system/bin/logcat -b kernel -D -f /cache/boot_log_kernel.txt
     class main
     user root
     group root system
