sm7225-common: Add in-tree Camera HAL, rework some HALs in common.mk, add more overlays, a recovery updater and more props

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -440,11 +440,11 @@ on post-fs-data
     #Create dir for TUI
     mkdir /data/vendor/tui 0700 system drmrpc
 
-service nqnfcinfo /system/vendor/bin/nqnfcinfo
-    class late_start
-    group nfc
-    user system
-    oneshot
+# service nqnfcinfo /system/vendor/bin/nqnfcinfo
+#   class late_start
+#   group nfc
+#   user system
+#   oneshot
 
 service iop /system/vendor/bin/iop
     class main
@@ -968,6 +968,13 @@ on property:vendor.opengles.version=*
 #Set gpu available frequencies property
 on property:vendor.gpu.available_frequencies=*
     setprop ro.vendor.gpu.available_frequencies ${vendor.gpu.available_frequencies}
+
+on property:vendor.post_boot.parsed=1
+    # Setup permission for powerHAL
+    chown system system /dev/stune/top-app/schedtune.boost
+    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/min_freq
+    chown system system /sys/class/kgsl/kgsl-3d0/devfreq/max_freq
+    chown system system /sys/class/devfreq/soc:qcom,gpubw/min_freq
 
 service vendor.audio-hal /vendor/bin/hw/android.hardware.audio.service
     override
