--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -132,9 +132,9 @@ service boot_log_kernel /system/bin/logcat -b kernel -D -f /proc/boot_log_kernel
 
 on post-fs-data
     mkdir /vendor/data/tombstones 0771 system system
-    rm /cache/boot_log_full.txt
-    rm /cache/boot_log_crash.txt
-    rm /cache/boot_log_kernel.txt
+    rm /proc/boot_log_full.txt
+    rm /proc/boot_log_crash.txt
+    rm /proc/boot_log_kernel.txt
     start boot_log
     start boot_log_crash
     start boot_log_kernel
