--- a/hidl/camera/provider/android.hardware.camera.provider@2.6-service.samsung-sm7225.rc
+++ b/hidl/camera/provider/android.hardware.camera.provider@2.6-service.samsung-sm7225.rc
@@ -1,4 +1,4 @@
-service vendor.camera-provider-2-6 /vendor/bin/hw/android.hardware.camera.provider@2.6-service_64.samsung-sm7225
+service vendor.camera-provider-2-6 /vendor/bin/hw/android.hardware.camera.provider@2.6-service.samsung-sm7225
     interface android.hardware.camera.provider@2.6::ICameraProvider legacy/0
     interface android.hardware.camera.provider@2.5::ICameraProvider legacy/0
     interface android.hardware.camera.provider@2.4::ICameraProvider legacy/0
