init.target.rc: Comment out wait for kymaster on late-fs
Thanks to Simon1511 tree

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -105,7 +105,7 @@ on post-fs
 
 on late-fs
     wait_for_prop hwservicemanager.ready true
-    exec_start wait_for_keymaster
+    #exec_start wait_for_keymaster
     mount_all --late
 
 # Logcat Services
