init.qcom.rc: Add batt_slate_mode permission
Fixes Lineage Health HAL

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -77,6 +77,9 @@ on init
     chown root system /sys/fs/cgroup/memory/bg/tasks
     chmod 0660 /sys/fs/cgroup/memory/bg/tasks
 
+    # Charger
+    chown system system /sys/class/power_supply/battery/batt_slate_mode
+
 on fs
     chmod 0660 /sys/class/camera/flash/rear_flash
     chown camera camera /sys/class/camera/flash/rear_flash
