init.target.rc: uncomment start keymaster

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -48,7 +48,7 @@ on init
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     start vendor.qseecomd
-    # start keymaster-4-0
+    start keymaster-4-0
 
 # GPIS HINT (SM7225)
     mkdir /dev/cpuset/sf
