init.target.rc: Disable adsprpcd
Silence:

01-01 23:44:21.515   598   598 E sscrpcd : vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:2611: Error 0x200: apps_dev_init failed for domain 0, errno Transport endpoint is not connected
01-01 23:44:21.515   598   598 E sscrpcd : vendor/qcom/proprietary/adsprpc/src/fastrpc_apps_user.c:2707: Error 0x200: open_dev (-1) failed for domain 0 (errno Transport endpoint is not connected)

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -108,6 +108,12 @@ on late-fs
     exec_start wait_for_keymaster
     mount_all --late
 
+service adsprpcd /vendor/bin/adsprpcd
+   class main
+   user media
+   group media
+   disabled
+
 # Logcat Services
 service boot_log /system/bin/logcat -b all -D -f /proc/boot_log_full.txt
     class main
