--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -21,19 +21,20 @@ INTERMEDIATE_POS=0
 SUPL_VER=0x20000
 
 # Emergency SUPL, 1=enable, 0=disable
-#SUPL_ES=1
+SUPL_ES=1
 
 #Choose PDN for Emergency SUPL
 #1 - Use emergency PDN
 #0 - Use regular SUPL PDN for Emergency SUPL
-#USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=0
+USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
 
 #SUPL_MODE is a bit mask set in config.xml per carrier by default.
 #If it is uncommented here, this value will overwrite the value from
 #config.xml.
 #MSA=0X2
 #MSB=0X1
-#SUPL_MODE=
+#Sensor R&D : Change default bit mask
+SUPL_MODE=3
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -146,7 +147,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0xF
+A_GLONASS_POS_PROTOCOL_SELECT = 0
 
 ##################################################
 # Select technology for LPPe Control Plane
@@ -181,7 +182,7 @@ A_GLONASS_POS_PROTOCOL_SELECT = 0xF
 #     A_GLONASS_POS_PROTOCOL_SELECT
 # 0: disable
 # 1: enable
-AGPS_CONFIG_INJECT = 1
+AGPS_CONFIG_INJECT = 0
 
 ##################################################
 # GNSS settings for automotive use cases
@@ -308,7 +309,7 @@ MODEM_TYPE = 1
 #####################################
 # This is a string that is sent to the framework
 # in nfwNotifyCb callback
-PROXY_APP_PACKAGE_NAME = com.google.android.carrierlocation
+PROXY_APP_PACKAGE_NAME = com.sec.location.nfwlocationprivacy
 
 #####################################
 # CP_MTLR_ES
