--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -43,7 +43,7 @@ NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
 NLP_THRESHOLD = 3
 NLP_ACCURACY_MULTIPLE = 2
-NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 1
+NLP_COMBO_MODE_USES_QNP_WITH_NO_EULA_CONSENT = 0
 
 #########################################
 # NLP PACKAGE SETTINGS
@@ -93,7 +93,6 @@ GTP_PRIVACY_RETRY_INTERVAL = 86400
 # DISABLED
 # LEGACY_WWAN
 # SDK (WWAN not available for Modems before LocTech 10.0)
-# SDK_WIFI (WWAN provided by legacy Modem)
 GTP_MODE=DISABLED
 
 #GTP_WAA valid modes:
@@ -105,14 +104,13 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-# PREMIUM_ENV_AIDING
 # MODEM_DEFAULT
-SAP=MODEM_DEFAULT
+SAP=PREMIUM
 
 #FREE_WIFI_SCAN_INJECT valid modes:
 #DISABLED
 #BASIC
-FREE_WIFI_SCAN_INJECT=BASIC
+FREE_WIFI_SCAN_INJECT=DISABLED
 
 #SUPL_WIFI valid modes:
 #DISABLED
@@ -123,14 +121,6 @@ SUPL_WIFI=BASIC
 #DISABLED
 #BASIC
 WIFI_SUPPLICANT_INFO=BASIC
-
-#DBH modes:
-#USE_ZPP_IN_DBH values:
-#0: for new Modem platform, time based tracking is supported during DBH in modem,
-#   AP side doesn't need to use ZPP to get best available position during DBH.
-#1: for old Modem platform, time based tracking is not supported during DBH in modem,
-#   AP side has to use ZPP to get bese available position during DBH for CPI injection.
-USE_ZPP_IN_DBH = 0
 
 #####################################
 # Location process launcher settings
@@ -189,20 +179,20 @@ IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
 SOC_IDS=all
 BASEBAND=all
-LOW_RAM_TARGETS=ENABLED
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=0
 
 PROCESS_NAME=xtwifi-inet-agent
 PROCESS_ARGUMENT=
-PROCESS_STATE=DISABLED
+PROCESS_STATE=ENABLED
 PROCESS_GROUPS=inet gps
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xc03
 PLATFORMS=all
-SOC_IDS=all
+SOC_IDS=all exclude 386 436
 BASEBAND=all
-LOW_RAM_TARGETS=ENABLED
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
@@ -213,9 +203,9 @@ PROCESS_GROUPS=wifi inet gps system oem_2904
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xd03
 PLATFORMS=all
-SOC_IDS=all
+SOC_IDS=all exclude 386 436
 BASEBAND=all
-LOW_RAM_TARGETS=ENABLED
+LOW_RAM_TARGETS=DISABLED
 HARDWARE_TYPE=all
 VENDOR_ENHANCED_PROCESS=1
 
@@ -274,7 +264,7 @@ VENDOR_ENHANCED_PROCESS=1
 PROCESS_NAME=engine-service
 PROCESS_ARGUMENT=PPE libepsimulator.so
 PROCESS_STATE=DISABLED
-PROCESS_GROUPS=gps diag inet qwes oem_2901 system
+PROCESS_GROUPS=gps diag inet oem_2901
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0
 PLATFORMS=all
