Revert "configs: nfc: Adjust for pn547"
This reverts commit 04564e72210ff8185199937676fb99e05d8b5f98.

--- a/configs/nfc/libnfc-nxp.conf
+++ b/configs/nfc/libnfc-nxp.conf
@@ -4,18 +4,16 @@
 # Application options
 # Logging Levels
 # NXPLOG_DEFAULT_LOGLEVEL    0x01
-# ANDROID_LOG_DEBUG          0x04
-# ANDROID_LOG_INFO           0x03
+# ANDROID_LOG_DEBUG          0x03
 # ANDROID_LOG_WARN           0x02
 # ANDROID_LOG_ERROR          0x01
 # ANDROID_LOG_SILENT         0x00
-NXPLOG_EXTNS_LOGLEVEL=0x04
-NXPLOG_NCIHAL_LOGLEVEL=0x04
-NXPLOG_NCIX_LOGLEVEL=0x04
-NXPLOG_NCIR_LOGLEVEL=0x04
-NXPLOG_FWDNLD_LOGLEVEL=0x04
-NXPLOG_TML_LOGLEVEL=0x04
-
+NXPLOG_EXTNS_LOGLEVEL=0x03
+NXPLOG_NCIHAL_LOGLEVEL=0x03
+NXPLOG_NCIX_LOGLEVEL=0x03
+NXPLOG_NCIR_LOGLEVEL=0x03
+NXPLOG_FWDNLD_LOGLEVEL=0x03
+NXPLOG_TML_LOGLEVEL=0x03
 
 ###############################################################################
 # Nfc Device Node name
@@ -93,7 +91,7 @@ NXP_GUARD_TIMER_VALUE=0x0F
 #PN80T              0x08
 #PN557              0x09
 #PN81T              0x0A
-NXP_NFC_CHIP=0x09
+NXP_NFC_CHIP_TYPE=0x09
 
 ################################################################################
 #This is used to configure UICC2 at boot time.
@@ -268,7 +266,7 @@ NFA_POLL_BAIL_OUT_MODE=0x00
 ###############################################################################
 # White list of Hosts
 # This values will be the Hosts(NFCEEs) in the HCI Network.
-DEVICE_HOST_ALLOW_LIST={C0, 80}
+DEVICE_HOST_WHITE_LIST={C0, 80}
 
 ###############################################################################
 # Choose the presence-check algorithm for type-4 tag.  If not defined, the default value is 1.
