--- a/rootdir/etc/init.vendor.sysfw.rc
+++ b/rootdir/etc/init.vendor.sysfw.rc
@@ -15,3 +15,9 @@ on boot
 	chown system system /sys/fs/f2fs/userdata/sec_io_stat
 	chown system system /sys/fs/f2fs/userdata/sec_fsck_stat
 	chown system system /sys/fs/f2fs/userdata/sec_defrag_stat
+
+# APEXD timeout for DeviceMapper create/delete
+on late-init
+    setprop apexd.config.dm_create.timeout 10000
+    setprop apexd.config.dm_delete.timeout 10000
+    setprop apexd.config.loop_wait.attempts 40
