--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -214,3 +214,6 @@ service dcvs-sh /vendor/bin/init.qti.dcvs.sh
 
 on property:vendor.dcvs.prop=1
    start dcvs-sh
+
+on property:persist.vendor.radio.port_index=""
+    setprop sys.usb.config adb
