--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -82,7 +82,6 @@ on init
 
     # Send Touchscreen fix commands
     write /sys/class/sec/tsp/cmd aot_enable,1
-    write /sys/class/sec/tsp/cmd ear_detect_enable,1
     write /sys/class/sec/tsp/cmd check_connection
     write /sys/class/sec/tsp/enabled 1,0
     write /sys/class/sec/tsp/enabled 2,1
@@ -221,7 +220,6 @@ on boot
 
     #Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
-
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
 
@@ -537,6 +535,9 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wcd_cpe0/fw_name
     #Reinit lmkd to reconfigure lmkd properties
     setprop lmkd.reinit 1
+
+    # Enable Proximity Sensor
+    write /sys/class/sec/tsp/cmd ear_detect_enable,1
 
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
